@startuml JobPortal

skinparam classAttributeIconSize 0

class User {
  -conn: PDO
  -table: string
  +id: int
  +username: string
  +email: string
  +password: string
  +user_type: string
  +error: string
  +register(): bool
  -validateInput(): bool
  -emailExists(): bool
  -usernameExists(): bool
}

class Job {
  -conn: PDO
  -table: string
  +id: int
  +company_id: int
  +title: string
  +description: string
  +requirements: string
  +location: string
  +salary_range: string
  +job_type: string
  +status: string
  +create(): bool
  +read(page: int, per_page: int): PDOStatement
  +getTotal(): int
  +update(): bool
}

class Profile {
  -conn: PDO
  -table: string
  +id: int
  +user_id: int
  +full_name: string
  +phone: string
  +address: string
  +bio: string
  +resume_path: string
  +company_name: string
  +company_website: string
  +company_logo: string
  +create(): bool
  +update(): bool
  +getProfileByUserId(user_id: int): array
}

class Application {
  -conn: PDO
  -table: string
  +id: int
  +job_id: int
  +user_id: int
  +status: string
  +applied_at: datetime
  +apply(): bool
  +getUserApplications(user_id: int): PDOStatement
  +getJobApplications(job_id: int): PDOStatement
  +updateStatus(): bool
  +checkExistingApplication(job_id: int, user_id: int): bool
}

User "1" -- "0..1" Profile
User "1" -- "*" Job : posts >
User "1" -- "*" Application : submits >
Job "1" -- "*" Application

@enduml